--- a/car_control_board_src/gd32/module_4_wheeled_car_control_v2/module_4_wheeled_car_control_v2.ioc
+++ b/car_control_board_src/gd32/module_4_wheeled_car_control_v2/module_4_wheeled_car_control_v2.ioc
@@ -23,14 +23,15 @@ Mcu.Pin15=PB13
 Mcu.Pin16=PB14
 Mcu.Pin17=PB15
 Mcu.Pin18=PA9
-Mcu.Pin19=PA13
+Mcu.Pin19=PA12
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA14
-Mcu.Pin21=PB3
-Mcu.Pin22=PB5
-Mcu.Pin23=PB7
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PB3
+Mcu.Pin23=PB5
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -38,7 +39,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -64,6 +65,8 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=DIG_AIN_1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -146,7 +149,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
